--- a/certificates.html
+++ b/certificates.html
@@ -34,7 +34,7 @@
 <meta itemprop="name" content="Certificates">
 <meta itemprop="description" content="Check out my certificates">
 
-<meta itemprop="wordCount" content="96">
+<meta itemprop="wordCount" content="99">
 
 
 
@@ -251,6 +251,13 @@
 <p>Structuring Machine Learning Projects
 <figure>
     <img src="images/Structuring%20Machine%20Learning%20Projects.PNG"/> 
+</figure>
+</p>
+</li>
+<li>
+<p>Convolutional Neural Network
+<figure>
+    <img src="images/Convolutional%20Neural%20Network.PNG"/> 
 </figure>
 </p>
 </li>
