--- a/blogs.html
+++ b/blogs.html
@@ -34,7 +34,7 @@
 <meta itemprop="name" content="Blogs">
 <meta itemprop="description" content="Check out my blogs">
 
-<meta itemprop="wordCount" content="25">
+<meta itemprop="wordCount" content="37">
 
 
 
@@ -187,6 +187,10 @@
 <tr>
 <td>Twitter - A playground from NLP:</td>
 <td><a href="https://www.notion.so/Twitter-A-playground-for-NLP-d4f6f920f76f4c2fbb41447f52130bdd">https://www.notion.so/Twitter-A-playground-for-NLP-d4f6f920f76f4c2fbb41447f52130bdd</a></td>
+</tr>
+<tr>
+<td>How to download a batch of images quickly from Google Images:</td>
+<td><a href="https://www.notion.so/How-to-download-a-batch-of-images-quickly-from-Google-Images-3c55a6c5db7a40d0afdaf4f7fac80527">https://www.notion.so/How-to-download-a-batch-of-images-quickly-from-Google-Images-3c55a6c5db7a40d0afdaf4f7fac80527</a></td>
 </tr>
 </tbody>
 </table>
