--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   
   
-  <header class="cover bg-top" style="background-image: url('https://sayantanmukh050893.github.io/sayantan-data-science-portfolio/images/sayantan-intro.gif');">
+  <header class="cover bg-top" style="background-image: url('https://sayantanmukh050893.github.io/sayantan-data-science-portfolio/images/sayantan-intro.gif');background-size: cover;">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
