--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ In many big games critics find Messi to be subdued and missing from the game. Th
     
 
   <script src="./dist/js/app.3fc0f988d21662902933.js"></script>
-
+  <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(132986)</script>
 
   </body>
 </html>
