--- a/certificates.html
+++ b/certificates.html
@@ -333,6 +333,7 @@
     
 
   <script src="./dist/js/app.3fc0f988d21662902933.js"></script>
+  <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(132986)</script>
 
 
   </body>
