--- a/tags.html
+++ b/tags.html
@@ -298,6 +298,7 @@ The purpose of this project is to detect whether or not a patient has healthy he
     
 
   <script src="./dist/js/app.3fc0f988d21662902933.js"></script>
+  <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(132986)</script>
 
 
   </body>
