--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		img.sticky {
 		position: -webkit-sticky;
 		position: fixed;
-		bottom: 0;
-		right:0;
+		top: 0;
+		left:0;
 		align-items: flex-start;
 		align-self: flex-end;
 		width: 30%;
