index.html updated for better tagging in google

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    
+  	<title>Data Science Hub | Data Science | Machine Learning | Sayantan Mukhopadhyay | Sayantan | Data Science Hub Sayantan</title>
+  
+    <meta name="description" content="Place for all Data Science and Machine Learning practitioner and enthusiasts to learn and collaborate." />
     <style>
 	
 		.container {
