Making changes in certificates.html

--- a/certificates.html
+++ b/certificates.html
@@ -34,7 +34,7 @@
 <meta itemprop="name" content="Certificates">
 <meta itemprop="description" content="Check out my certificates">
 
-<meta itemprop="wordCount" content="99">
+<meta itemprop="wordCount" content="102">
 
 
 
@@ -200,6 +200,13 @@
 </figure>
 </p>
 </li>
+<li>
+<p>Microsoft Technology Associate
+<figure>
+    <img src="images/Microsoft%20Technology%20Associate.PNG"/> 
+</figure>
+</p>
+</li>
 </ol>
 <ul>
 <li><strong>Machine Learning related certificates</strong></li>
@@ -281,7 +288,7 @@
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://sayantanmukh050893.github.io/sayantan-data-science-portfolio/" >
-    &copy;  Sayantan Mukhopadhyay 2020 
+    &copy;  Sayantan Mukhopadhyay 2021 
   </a>
     <div>
 
